--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
 
   run:
     - python >=3.7
+    - setuptools <76.0
     - future >=0.16
     - numpy >=1.19, <1.27
     - scipy >=1.1
