--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "odl" %}
-{% set version = "0.8.0" %}
+{% set version = "0.8.1" %}
 
 package:
   name: {{ name|lower }}
@@ -31,7 +31,7 @@ requirements:
 
 test:
   requires:
-    - pytest >=5.4
+    - pytest >=5.4, <8.0
   imports:
     - odl
   commands:
