--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,14 +24,14 @@ requirements:
     - python >={{ python_min }}
     - setuptools <76.0
     - future >=0.16
-    - numpy >=1.19, <1.27
+    - numpy >=1.19, <2.2
     - scipy >=1.1
     - packaging >=17.0
     - matplotlib-base >=3.4
 
 test:
   requires:
-    - pytest >=5.4, <8.0
+    - pytest >=5.4
     - python {{ python_min }}
   imports:
     - odl
